test/invalid/report.ml
# Error, not declared.
# -------------------------------------------------
a * b
add(a, b)
print add(a, b)
print a + b
print add(a, b) - add(10, 2)